--- a/todo
+++ b/todo
@@ -1,2 +1,14 @@
-* punkt 4.4
-* blog section 2 punkt, header text to right
+*** punkt 4.4
+*** blog section 2 punkt, header text to 
+*** order status button ? absolute : static
+
+*** Product view table
+*** es-app-bg has 2 version. All should be new
+*** Useful articles navbar fixed
+*** Wholesale file review figma file
+*** checkout input value color
+*** Profile input value color
+*** collaction collapse padding
+*** category filter nav
+*** Footer new
+*** unpload input icon
