Previous mistakes fixed

--- a/todo
+++ b/todo
@@ -12,3 +12,10 @@
 *** category filter nav
 *** Footer new
 *** unpload input icon
+
+slider dots
+To'plamlar card (kolleksii) button font weight
+To'plamlar card (kolleksii) card headline, card text font weight
+actions page heading spacing
+actions page action name and action date salign items center
+actions page action content line height
